applications/media-experimental/base/bindery/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bindery
  labels:
    app: bindery
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8787
      targetPort: http
      protocol: TCP
  selector:
    app: bindery
