applications/media-experimental/base/bindery/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bindery
  labels:
    app: bindery
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/instance: "main"
    gethomepage.dev/name: "Bindery"
    gethomepage.dev/description: "Books *arr (Usenet/torrent)"
    gethomepage.dev/group: "Book Automation (Exp)"
    gethomepage.dev/weight: "21"
    gethomepage.dev/icon: "book.png"
    gethomepage.dev/href: "http://bindery.${CLUSTER_DOMAIN}"
    gethomepage.dev/siteMonitor: "http://bindery.media-experimental.svc.cluster.local:8787"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bindery.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: bindery
          port: 8787
